--- a/css/main.css
+++ b/css/main.css
@@ -125,4 +125,46 @@ section h3 {
   font-family: "PT Sans Narrow", sans-serif;
   font-size: 1.125rem;
   background-color: rgba(0, 0, 0, .1);
+  padding: 1rem 0;
+}
+
+section li > img {
+  grid-column: 1 / -1;
+  grid-row: 1 / -1;
+}
+
+section div {
+  grid-area: top;
+
+  display: flex;
+  flex-direction: row-reverse;
+  align-items: center;
+  justify-self: end;
+  background-color: rgba(0, 0, 0, .1);
+  border-radius: 1em 0 0 1em;
+  padding: 0 .5em;
+  margin: .5em 0 0;
+  font-style: italic;
+}
+
+section div img {
+  width: 1em;
+  height: 1em;
+  margin-right: .5rem;
+}
+
+section div strong {
+  font-weight: normal;
+}
+
+footer {
+  display: flex;
+  justify-content: space-between;
+  padding: 1rem;
+  font-size: .875rem;
+  align-items: center;
+}
+
+footer a {
+  color: #000;
 }
